<resources>
    <string name="app_name">Egglyze</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="full_name_hint">Nama Lengkap</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Konfirmasi Password</string>
    <string name="signup_button_text">Daftar</string>
    <string name="login_prompt">Already have an account? </string>
    <string name="login_text">Login</string>
    <string name="forgot_password_text">Lupa Password?</string>

    <!--XML Home-->
    <string name="xml_home">Home</string>
    <string name="xml_celcius">°c</string>
    <string name="xml_location">location</string>
    <string name="xml_information">Information</string>
    <string name="xml_nitrogen">Nitrogen</string>
    <string name="xml_n">N</string>
    <string name="xml_phosphorus">Phosphorus</string>
    <string name="xml_p">P</string>
    <string name="xml_potassium">Potassium</string>
    <string name="xml_k">K</string>
    <string name="xml_humidity">Humidity</string>
    <string name="xml_ph">pH</string>
    <string name="xml_temperature">Temperature</string>
    <string name="xml_logo">tanamin ai logo</string>
    <string name="xml_scan">Scan Telur</string>
    <string name="xml_history">History</string>
    <string name="xml_egg">Egg</string>
    <string name="xml_rp">Rp xxx</string>
    <string name="xml_saldo">Saldo Anda</string>
    <string name="dialog_info">Aplikasi ini bertujuan untuk membantu dalam proses pengecekan kondisi telur, apakah telur tersebut masih layak untuk dikonsumsi atau tidak</string>
    <string name="xml_premium">Premium</string>
    <string name="xml_fitur">Fitur</string>
    <string name="belumpunyaakun">Belum punya akun?Don’t have an account?</string>
    <string name="xml_weather_desc">Wheather Desc</string>
    <string name="xml_jam">Tanggal Hari Ini</string>


    <!--Menu-->
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <!--Profile-->
    <string name="my_account">My Account</string>
    <string name="premium">Premium</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="rate_us">Rate Us</string>

    <!--XML History-->
    <string name="xml_result_history">Result History</string>
    <string name="xml_read_more">read more</string>

    <!--XML Profile-->
    <string name="xml_profile">Profile</string>
    <string name="xml_profile_name">profile</string>
    <string name="xml_grup_name">C241-PS395</string>
    <string name="xml_settings_name">Name</string>
    <string name="xml_theme">Theme</string>
    <string name="xml_app_theme">app theme</string>
    <string name="xml_light_dark">Light/Dark</string>
    <string name="xml_arrow">arrow right</string>
    <string name="xml_language">Language</string>
    <string name="xml_english_indonesia">english/indonesia</string>
    <string name="xml_logout">Logout</string>
    <string name="xml_cancel">cancel</string>
    <string name="xml_are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="xml_yes_logout">Yes, logout</string>
    <string name="xml_info_desc">The soil sensor updated every 5 minute. please click the refresh button to update the soil data</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="xml_accept">Accept</string>

    <!--XML Act Result-->
    <string name="xml_result">Result</string>
    <string name="fab_history_result">History result</string>
    <string name="xml_predictedat">PredictedAt :</string>
    <string name="analysis_failed">Analisis Gagal</string>

    <!--XML Prediction-->
    <string name="xml_prediction">Prediction</string>
    <string name="xml_prediction_desc">Identify the plants that\nmatch your soil conditions.\nClick to get the result</string>
    <string name="xml_start_prediction">Start Prediction...</string>
    <string name="xml_start">Start</string>
    <string name="loading">Loading...</string>

    <!--Camera-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Result</string>

    <!--Tensorflow Lite-->
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="camera_x">Camera-X</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu</string>

    <string name="email">Email</string>
</resources>